# disco-addon-docker-registry

./: Dockerfile  README.md  disco.json  init.py  pyproject.toml  requirements.in  requirements.txt
addon/: api.py  cgi.py  config.py  deploy.py  users.py
addon/alembic/versions/: 3411c97027a2_1_0_0.py
addon/endpoints/: addon.py  users.py
addon/models/: __init__.py  user.py
